[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Tower Sprites/Plate.png" type="Texture" id=1]
[ext_resource path="res://Scenes/TowerScenes/Plate.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Tower Sprites/Turnip Projectile.png" type="Texture" id=4]
[ext_resource path="res://Scenes/TowerScenes/VegetableTower1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/TowerScenes/MorselTower1.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.5, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 59, 51 )

[node name="Plate" type="Node2D"]
script = ExtResource( 2 )
vegetable_scene = ExtResource( 5 )
protein_scene = ExtResource( 6 )

[node name="PlateArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Shape" type="CollisionShape2D" parent="PlateArea"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TowerMenu" type="Node2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Vegetable" type="Node2D" parent="TowerMenu"]
position = Vector2( -1, 37 )

[node name="VSprite" type="Sprite" parent="TowerMenu/Vegetable"]
position = Vector2( 0, -9 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="VArea" type="Area2D" parent="TowerMenu/Vegetable"]
__meta__ = {
"_edit_lock_": true
}

[node name="VShape" type="CollisionShape2D" parent="TowerMenu/Vegetable/VArea"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBackground" type="Sprite" parent="TowerMenu/Vegetable"]
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Protein" type="Node2D" parent="TowerMenu"]
position = Vector2( 33, 37 )

[node name="PArea" type="Area2D" parent="TowerMenu/Protein"]
__meta__ = {
"_edit_lock_": true
}

[node name="PShape" type="CollisionShape2D" parent="TowerMenu/Protein/PArea"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PBackground" type="Sprite" parent="TowerMenu/Protein"]
modulate = Color( 0.933333, 0.0117647, 0.0117647, 1 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="PSprite" type="Sprite" parent="TowerMenu/Protein"]
self_modulate = Color( 0.992157, 0, 0.533333, 1 )
position = Vector2( 0, -9 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="BigArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BigArea"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="VUpgradeMenu" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="VUpgradeMenu"]
modulate = Color( 0.243137, 1, 0, 1 )
position = Vector2( 1, 52 )
texture = ExtResource( 3 )

[node name="PUpgradeMenu" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="PUpgradeMenu"]
modulate = Color( 0.988235, 0, 0.301961, 1 )
position = Vector2( 1, 52 )
texture = ExtResource( 3 )

[connection signal="input_event" from="PlateArea" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="TowerMenu/Vegetable/VArea" to="." method="_on_VArea_input_event"]
[connection signal="input_event" from="TowerMenu/Protein/PArea" to="." method="_on_PArea_input_event"]
[connection signal="mouse_exited" from="BigArea" to="." method="_on_BigArea_mouse_exited"]
